--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-redis": "^5.0.0",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
-    "nodemon": "^2.0.4"
+    "express-session": "^1.17.1",
+    "nodemon": "^2.0.4",
+    "redis": "^3.0.2"
   }
 }
