--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-redis": "^5.0.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
     "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "node-rsa": "^1.1.1",
     "nodemon": "^2.0.4",
     "redis": "^3.0.2"
   }
